# AnonTex

./: .env.template  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pytest.yml
anontex/: anontex_cli.py  constants.py  engines.py  main.py
anontex/routes/: openai_proxy.py
