[project]
name = "anontex"
version = "0.1.0"
description = "pii anonymizer as a llm proxy"
authors = [
    {name = "Chamath Attanyaka", email = "kaushalyabandaraatta@gmail.com"}
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "aiohttp (>=3.11.13,<4.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "faker (>=36.1.1,<37.0.0)",
    "presidio-analyzer (>=2.2.355,<2.2.356)",
    "presidio-anonymizer (>=2.2.355,<2.2.356)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
